--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "12.18.2"
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.3",
